--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "@prisma/client": "^5.16.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "mysql2": "^3.10.2",
+    "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -29,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "prisma": "^5.16.1"
   }
 }
